--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             </ul>
         </nav>
     </header>
-    
+
     <section class="hero">
     </section>
 
     <section class="content">
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -56,21 +56,21 @@
     </section>
 
     <section class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit-divs">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit-divs">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit-divs">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
