add html comments challenge complete

--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
             </ul>
         </nav>
     </header>
+    <!-- end navigation-->
 
+    <!-- hero-->
     <section class="hero" title="tech team looking over documents at a conference table">
     </section>
+    <!-- end hero-->
 
+    <!-- content-->
     <section class="content">
         <article id="search-engine-optimization" class="content-articles">
             <img src="./assets/images/search-engine-optimization.jpg" alt="notebook with SEO written on it on table" class="float-left" />
@@ -54,7 +58,9 @@
             </p>
         </article>
     </section>
+    <!-- end content-->
 
+    <!-- benefits-->
     <section class="benefits">
         <div class="benefit-divs">
             <h3>Lead Generation</h3>
@@ -78,13 +84,16 @@
             </p>
         </div>
     </section>
+    <!-- end benefits-->
 
+    <!-- footer-->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
+    <!-- end footer-->
 
     </body>
 </html>
